[package]
name = "grpc-bench"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1"
prost = "0.6"
futures = { version = "0.3", default-features = false }
anyhow = "1"
tokio = { version = "0.2", features = ["full"] }

metrics = "0.12"
metrics-runtime = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
# metrics-yaml = "0.12"

[build-dependencies]
tonic-build = "0.1"
